"add tout plein de truc, ca marche !"

--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
     <title>Trombinoscope WCS Bordeaux 2024 | WildCardS</title>
     <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="cssforjs.css"> <!--fichier temporaire-->
-    <link rel="stylesheet" href="zoom.css"> <!--fichier temporaire-->
 </head>
 
 <body>
     <!--Header-->
     <header>
         <nav>
-            <a href="index.html" class="backButtonMobile">
+            <a href="index.html" id="backButtonMobile">
                 <img src="images/arrow-left-svgrepo-com.svg" class="arrow_back">
             </a>
-            <a href="index.html" class="backButtonDesktop">
+            <a href="index.html" id="backButtonDesktop">
                 <img src="images/sparkles-light.svg" class="sparkles_light">
                 <p class="backButton">RETOUR</p>
             </a>
@@ -30,37 +28,40 @@
     </header>
     <!-- Main content -->
     <main id="main">
-        <p>Bienvenue sur le jeu de cartes / trombinoscope 2024 de la Wild Code School de Bordeaux !</p>
-        <h2>Choisis ton Clan</h2>
-        <section class="sliderContainer">
-            <div class="slider">
-                <!-- Carte équipe Data -->
-                <div class="slides slides-1">
-                    <a class="booster" id="boosterData"><img src="images/booster/boosterdata.png"
-                            alt="paquet de carte data"></a>
-                    <a>
-                        <h2>Team Data</h2>
-                    </a>
+        <section id="homePage">
+            <p class="pmain">Bienvenue sur le jeu de cartes / trombinoscope 2024 de la Wild Code School de Bordeaux !
+            </p>
+            <h2 class="titleMain">Choisis ton Clan</h2>
+            <section class="sliderContainer">
+                <div class="slider">
+                    <!-- Carte équipe Data -->
+                    <div class="slides slides-1" id="slidesData">
+                        <a class="booster" id="boosterData"><img src="images/booster/boosterdata.png"
+                                alt="paquet de carte data"></a>
+                        <a>
+                            <h2>Team Data</h2>
+                        </a>
+                    </div>
+                    <!-- Carte équipe JS -->
+                    <div class="slides slides-2" id="slidesJS">
+                        <a class="booster" id="boosterJS"><img src="images/booster/boosterjs.png"
+                                alt="paquet de carte JS"></a>
+                        <a>
+                            <h2>Team JS</h2>
+                        </a>
+                    </div>
+                    <!-- Carte équipe Staff -->
+                    <div class="slides slides-3" id="slidesStaff">
+                        <a class="booster" id="boosterStaff"><img src="images/booster/boosterstaff.png"
+                                alt="paquet de carte staff"></a>
+                        <a>
+                            <h2>Team Staff</h2>
+                        </a>
+                    </div>
                 </div>
-                <!-- Carte équipe JS -->
-                <div class="slides slides-2">
-                    <a class="booster" id="boosterJS"><img src="images/booster/boosterjs.png"
-                            alt="paquet de carte JS"></a>
-                    <a>
-                        <h2>Team JS</h2>
-                    </a>
-                </div>
-                <!-- Carte équipe Staff -->
-                <div class="slides slides-3">
-                    <a class="booster" id="boosterStaff"><img src="images/booster/boosterstaff.png"
-                            alt="paquet de carte staff"></a>
-                    <a>
-                        <h2>Team Staff</h2>
-                    </a>
-                </div>
-            </div>
+            </section>
         </section>
-        <section class="searchBar">
+        <section id="searchBar">
             <label>
                 <!-- Création conditions loupe: <input type="search" class="searchInput" name="term" autocomplete="off" placeholder="Search..." id="search-input"> -->
                 <!-- <input type="hidden" name="language" value="fr"> -->
@@ -149,6 +150,7 @@
     </main>
     <script type="module" src="script.js"></script>
     <script type="module" src="search.js"></script>
+    <!-- <script type="module" src="nav.js"></script> -->
 </body>
 
 </html>
