--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
     <title>Trombinoscope WCS Bordeaux 2024 | WildCardS</title>
     <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="cssforjs.css"> <!--fichier temporaire-->
-    <link rel="stylesheet" href="zoom.css"> <!--fichier temporaire-->
 </head>
 
 <body>
     <!--Header-->
     <header>
         <nav>
-            <a href="index.html" class="backButtonMobile">
+            <a href="index.html" class="backButtonMobile" id="backButtonMobile">
                 <img src="images/arrow-left-svgrepo-com.svg" class="arrow_back">
             </a>
             <a href="index.html" class="backButtonDesktop">
@@ -149,6 +147,7 @@
     </main>
     <script type="module" src="script.js"></script>
     <script type="module" src="search.js"></script>
+    <script type="module" src="nav.js"></script>
 </body>
 
 </html>
