--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <img src="images/sparkles-light.svg" class="sparkles_light">
                 <p class="backButton">RETOUR</p>
             </a>
-            <img src="images/logowildCard.svg" alt="logo with the name of the website written" class="logoWCS">
+            <a href="index.html" class="logoWCS">
+                <img src="images/logowildCard.svg" alt="logo with the name of the website written" class="logoWCS">
+            </a>
             <img src="images/logopython.svg" class="logoTeam" alt="logo team">
         </nav>
     </header>
