derniere correction css et js

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                 <p class="backButton">RETOUR</p>
             </a>
             <img src="images/logowildCard.svg" alt="logo with the name of the website written" class="logoWCS">
-            <img src="images/logopython.svg" class="logoTeam" alt="logo team">
+            <div>
+                <img src="images/logopython.svg" class="logoTeam" alt="logo team">
+            </div>
         </nav>
     </header>
     <!-- Main content -->
