ajout target blank

--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                     <p class="cardGoals"></p>
                     <p class="cardEmail"></p>
                     <div class="socialLink">
-                        <a href="" class="cardLinkedIn"><img src="images/logoLinkedin.svg" alt="logo LinkedIn"></a>
-                        <a href="" class="cardTwitter"><img src="images/logox.png" alt="logo X / Twitter"></a>
-                        <a href="" class="cardGithub"><img src="images/logogihub.svg" alt="logo github"></a>
+                        <a href="" class="cardLinkedIn" target="_blank"><img src="images/logoLinkedin.svg" alt="logo LinkedIn"></a>
+                        <a href="" class="cardTwitter" target="_blank"><img src="images/logox.png" alt="logo X / Twitter"></a>
+                        <a href="" class="cardGithub" target="_blank"><img src="images/logogihub.svg" alt="logo github"></a>
                     </div>
                 </div>
                 <img src="images/croix.svg" class="closeButton">
